# soundboard

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  pwsp.spec
.claude/: architecture.md  configuration.md  decisions.md  development.md  index.md  networking.md  overview.md  review-queue.md  security.md  update-system.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: auto-tag.yml  build-release.yml  build.yml  ci.yml  codeql.yml  dependabot-auto-merge.yml  doc-review.yml  release-archive.yml  release-deb.yml  release-windows.yml  release.yml  security-audit.yml  security-scan.yml
assets/: pwsp-daemon.service  pwsp-gui.desktop  soundboard-daemon.service  soundboard-gui.desktop
src/: App.css  App.tsx  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  hotkeys.rs  lib.rs  pipewire.rs  sound_manager.rs
src/gui/: draw.rs  hotkeys.rs  input.rs  mod.rs  tray.rs  update.rs
src/types/: audio_player.rs  commands.rs  config.rs  gui.rs  mod.rs  socket.rs
src/utils/: commands.rs  config.rs  daemon.rs  gui.rs  logging.rs  mod.rs  pipewire.rs  updater.rs
