[package]
name = "pwsp"
version = "1.8.0"
edition = "2021"
authors = ["arabian"]
description = "PWSP lets you play audio files through your microphone. Has both CLI and GUI clients. Supports Linux (PipeWire) and Windows (VB-Audio Virtual Cable)."
readme = "README.md"
homepage = "https://pwsp.arabianq.ru"
repository = "https://github.com/arabianq/pipewire-soundpad"
license = "MIT"
keywords = ["soundpad", "pipewire", "audio", "cli", "gui"]


[dependencies]
tokio = { version = "1.51.0", features = ["full"] }
async-trait = "0.1.89"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

clap = { version = "4.6.0", default-features = false, features = ["std", "suggestions", "help", "usage", "error-context", "derive"] }
dirs = "6.0.0"

rodio = { version = "0.22.2", default-features = false, features = ["symphonia-all", "playback"] }
rfd = "0.17.2"

egui = { version = "0.34.1", default-features = false, features = ["default_fonts", "rayon"] }
eframe = { version = "0.34.1", default-features = false, features = ["default_fonts", "glow", "x11", "wayland", "wgpu"] }
egui_material_icons = "0.6.0"

image = { version = "0.25", default-features = false, features = ["png"] }
global-hotkey = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
semver = "1.0"
sha2 = "0.10"
open = "5"

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = "0.9.2"
ksni = { version = "0.3", features = ["blocking"] }

[target.'cfg(target_os = "windows")'.dependencies]
tray-icon = "0.22"
muda = "0.17"

[[bin]]
name = "pwsp-daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "pwsp-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "pwsp-gui"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[package.metadata.deb]
maintainer = "arabian"
extended-description = "PWSP (PipeWire SoundPad) lets you play audio files through your microphone. Includes a daemon, CLI client, and GUI client. Supports Linux (PipeWire) and Windows (VB-Audio Virtual Cable)."
section = "sound"
assets = [
    ["target/release/pwsp-daemon", "usr/bin/", "755"],
    ["target/release/pwsp-cli", "usr/bin/", "755"],
    ["target/release/pwsp-gui", "usr/bin/", "755"],
    ["assets/pwsp-gui.desktop", "usr/share/applications/pwsp.desktop", "644"],
    ["assets/icon.png", "usr/share/icons/hicolor/256x256/apps/pwsp.png", "644"],
    ["assets/pwsp-daemon.service", "usr/lib/systemd/user/pwsp-daemon.service", "644"],
]
