[package]
name = "soundboard"
version = "1.10.0"
edition = "2021"
authors = ["arabian"]
description = "Soundboard lets you play audio files through your microphone. Has both CLI and GUI clients. Supports Linux (PipeWire) and Windows (VB-Audio Virtual Cable)."
readme = "README.md"
repository = "https://github.com/jj-repository/soundboard"
license = "MIT"
keywords = ["soundboard", "soundpad", "pipewire", "audio", "cli", "gui"]


[dependencies]
tokio = { version = "1.52.1", features = ["full"] }
async-trait = "0.1.89"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

clap = { version = "4.6.1", default-features = false, features = ["std", "suggestions", "help", "usage", "error-context", "derive"] }
dirs = "6.0.0"

rodio = { version = "0.22.2", default-features = false, features = ["symphonia-all", "playback"] }
rfd = "0.17.2"

egui = { version = "0.34.1", default-features = false, features = ["default_fonts", "rayon"] }
eframe = { version = "0.34.1", default-features = false, features = ["default_fonts", "glow", "x11", "wayland", "wgpu"] }
egui_material_icons = "0.6.0"

image = { version = "0.25", default-features = false, features = ["png"] }
global-hotkey = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
semver = "1.0"
sha2 = "0.11"
open = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = "0.9.2"
ksni = { version = "0.3", features = ["blocking"] }

[target.'cfg(target_os = "windows")'.dependencies]
tray-icon = "0.23"
muda = "0.19"
# Lock-free SPSC ring buffer for mic passthrough. Avoids locking the audio
# callback against the playback thread at 48 kHz.
ringbuf = "0.4"

[[bin]]
name = "soundboard-daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "soundboard-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "soundboard-gui"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
